--- a/index.html
+++ b/index.html
@@ -24,12 +24,21 @@
   </style>
 </head>
 <body>
-  <canvas id="c"></canvas>
+  <canvas id="output"></canvas>
   <video id="v" autoplay loop controls>
   <source src="videos/astley.ogv" type="video/ogg" />
+  <source src="videos/astley.webm" type="video/webm" />
   <source src="videos/astley.mp4" type="video/mp4" />
   </video>
 </body>
-<script src="javascripts/player.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+<script src="javascripts/ccv.js"></script>
+<script src="javascripts/face.js"></script>
+<script src="javascripts/scripts.js"></script>
+<script src="javascripts/stackblur.js"></script>
+<script>
+  App.start('glasses');
+</script>
+
 </html>
 
