Sync the size of the canvas element's base dimensions and client dimensions.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Fish Roll</title>
   <style>
     body { background: black; }
-    #c {
+    #output {
       position: absolute;
       top: 0;
       bottom: 0;
@@ -20,6 +20,7 @@
       top: 50%;
       left: 50%;
       margin: -180px 0 0 -240px;
+      // display: none;
     }
   </style>
 </head>
@@ -37,7 +38,7 @@
 <script src="javascripts/scripts.js"></script>
 <script src="javascripts/stackblur.js"></script>
 <script>
-  App.start('glasses');
+  App.start('none');
 </script>
 
 </html>
