--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Fish Roll</title>
   <style>
     body { background: black; }
-    #output {
+    #output2 {
       position: absolute;
       top: 0;
       bottom: 0;
@@ -15,12 +15,14 @@
       width: 100%;
       height: 100%;
     }
-    #v {
+    #output, #v {
       position: absolute;
       top: 50%;
       left: 50%;
       margin: -180px 0 0 -240px;
-      // display: none;
+    }
+    #v {
+      display: none;
     }
   </style>
 </head>
@@ -38,7 +40,7 @@
 <script src="javascripts/scripts.js"></script>
 <script src="javascripts/stackblur.js"></script>
 <script>
-  App.start('none');
+  App.start('glasses');
 </script>
 
 </html>
