Make sure the canvas size is set before getting the image data, and WE HAZ FISH ROLL!

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <script src="javascripts/scripts.js"></script>
 <script src="javascripts/stackblur.js"></script>
 <script>
-  App.start('glasses');
+  App.start('fish');
 </script>
 
 </html>
