Center the video on the screen.

--- a/index.html
+++ b/index.html
@@ -6,22 +6,20 @@
   <title>Fish Roll</title>
   <style>
     body { background: black; }
-    #output2 {
+    #output {
       position: absolute;
       top: 0;
       bottom: 0;
       left: 0;
       right: 0;
       width: 100%;
-      height: 100%;
+      height; 100%;
     }
-    #output, #v {
+    #v {
       position: absolute;
       top: 50%;
       left: 50%;
       margin: -180px 0 0 -240px;
-    }
-    #v {
       display: none;
     }
   </style>
