--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <source src="videos/astley.mp4" type="video/mp4" />
   </video>
 </body>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="javascripts/ccv.js"></script>
 <script src="javascripts/face.js"></script>
 <script src="javascripts/scripts.js"></script>
